[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/icons/checkbox_off.png" type="Texture" id=1]
[ext_resource path="res://assets/fonts/montserrat_eb_14.tres" type="DynamicFont" id=2]
[ext_resource path="res://menu/editor_menu/item/item.gd" type="Script" id=3]

[node name="item" type="MarginContainer"]
margin_right = 397.0
margin_bottom = 100.0
rect_min_size = Vector2( 0, 100 )
script = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 397.0
margin_bottom = 100.0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 397.0
margin_bottom = 100.0

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer"]
margin_right = 397.0
margin_bottom = 2.0
rect_min_size = Vector2( 0, 2 )

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 6.0
margin_right = 397.0
margin_bottom = 94.0
size_flags_vertical = 3

[node name="MarginContainer3" type="MarginContainer" parent="VBoxContainer/HBoxContainer"]
margin_right = 4.0
margin_bottom = 88.0
rect_min_size = Vector2( 4, 0 )

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/HBoxContainer"]
margin_left = 8.0
margin_top = 4.0
margin_right = 88.0
margin_bottom = 84.0
rect_min_size = Vector2( 80, 80 )
size_flags_vertical = 4
texture = ExtResource( 1 )
expand = true

[node name="MarginContainer5" type="MarginContainer" parent="VBoxContainer/HBoxContainer"]
margin_left = 92.0
margin_right = 100.0
margin_bottom = 88.0
rect_min_size = Vector2( 8, 0 )

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
margin_left = 104.0
margin_right = 205.0
margin_bottom = 88.0
size_flags_horizontal = 3
alignment = 1

[node name="map_name" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 21.0
margin_right = 101.0
margin_bottom = 42.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
text = "Name "

[node name="map_size" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 46.0
margin_right = 101.0
margin_bottom = 67.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
text = "Size"

[node name="edit" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 209.0
margin_top = 4.0
margin_right = 289.0
margin_bottom = 84.0
rect_min_size = Vector2( 80, 80 )
size_flags_horizontal = 0
size_flags_vertical = 4
custom_fonts/font = ExtResource( 2 )
text = "Edit"

[node name="MarginContainer7" type="MarginContainer" parent="VBoxContainer/HBoxContainer"]
margin_left = 293.0
margin_right = 301.0
margin_bottom = 88.0
rect_min_size = Vector2( 8, 0 )

[node name="delete" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 305.0
margin_top = 4.0
margin_right = 385.0
margin_bottom = 84.0
rect_min_size = Vector2( 80, 80 )
size_flags_horizontal = 0
size_flags_vertical = 4
custom_fonts/font = ExtResource( 2 )
text = "Delete"

[node name="MarginContainer6" type="MarginContainer" parent="VBoxContainer/HBoxContainer"]
margin_left = 389.0
margin_right = 397.0
margin_bottom = 88.0
rect_min_size = Vector2( 8, 0 )

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
margin_top = 98.0
margin_right = 397.0
margin_bottom = 100.0
rect_min_size = Vector2( 0, 2 )

[connection signal="pressed" from="VBoxContainer/HBoxContainer/edit" to="." method="_on_edit_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/delete" to="." method="_on_delete_pressed"]
